--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,6 +3,7 @@
   %p Hello, #{current_user.email}
   = link_to 'Your profile', current_user
   = link_to 'Logout', destroy_user_session_path, method: :delete
+  = link_to 'Requests', requests_path
 - else
   = link_to 'Login', new_user_session_path
   = link_to 'Register', new_user_registration_path
