--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,8 @@
-%h1 CoderConnectClub
 - if user_signed_in?
-  %p Hello, #{current_user.email}
-  = link_to 'Your profile', current_user
+  = link_to current_user.email, current_user
   = link_to 'Logout', destroy_user_session_path, method: :delete
-  = link_to 'Requests', requests_path
 - else
   = link_to 'Login', new_user_session_path
   = link_to 'Register', new_user_registration_path
+
+= render 'requests/list'
