--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,12 @@
+%p
+  Welcome to CoderConnectClub!
+%p
+  We connect volunteer tutors to anybody learning to code
+  in order to make the amazing and useful skill of programming to anybody, regardless
+  of background.
+%p
+  Join now to find a tutor or offer your skills!
+
 - if user_signed_in?
   = link_to current_user.email, current_user
   = link_to 'Logout', destroy_user_session_path, method: :delete
