--- a/app/views/responses/new.html.haml
+++ b/app/views/responses/new.html.haml
@@ -1,5 +1,11 @@
-%h1 New response
+%h2
+  Respond to
+  = @request.user.name
+
+%p
+  %b= @request.title
+  = @request.description
 
 = render 'form'
 
-= link_to 'Back', responses_path
+= link_to 'Back', root_path
