--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,15 +2,16 @@
   = link_to current_user.email, current_user
   = link_to 'Logout', destroy_user_session_path, method: :delete
 
-  %h3 Your requests:
-  = list_of current_user.requests do |req|
-    %b= req.title
-    = req.description
-    %ul
-      = list_of req.responses do |res|
-        %i
-          Response from #{link_to res.user.name, res.user}:
-          = res.description
+  - unless current_user.requests.empty?
+    %h3 Your requests:
+    = list_of current_user.requests do |req|
+      %b= req.title
+      = req.description
+      %ul
+        = list_of req.responses do |res|
+          %i
+            Response from #{link_to res.user.name, res.user}:
+            = res.description
 
 - else
   %p
@@ -21,6 +22,7 @@
     of background.
   %p
     Join now to find a tutor or offer your skills!
+  %p
     = link_to 'Login', new_user_session_path
     = link_to 'Register', new_user_registration_path
 
