--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,2 +1,6 @@
-This is the profile for
-= @user.email
+%h3= @user.name
+%p #{@user.hours} hours of volunteering
+%p Description:
+%p= @user.description
+%p Contact:
+%p= @user.contact_info
